week_2/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          imagePullPolicy: IfNotPresent
          volumeMounts:
#            - 这边要对应到 mysql 的数据存储的位置
#            - 通过 MySQL 的配置可以改这个目录
            - mountPath: /var/lib/mysql
#            我 POD 里面有那么多 volumes，我要用哪个
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
