week_2/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      #访问的端口
      port: 13306
      targetPort: 3306
      nodePort: 30002
  type: NodePort
