week_2/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: webook.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webook
            port: 
              number: 81
